--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   ],
   "scripts": {
     "download-protocols": "jake -f jakefile.coffee download-protocols",
-    "generate-crdp": "tsc -p src/tsconfig.json && node out/protocolToCrdp.js",
+    "generate-latest": "tsc -p src/tsconfig.json && node lib/main",
+    "build-watch-generator": "tsc -w -p src/tsconfig.json",
+    "generate-crdp": "node out/protocolToCrdp.js",
     "smoke-test": "tsc -p test/tsconfig.json"
   },
   "repository": {
@@ -39,11 +41,12 @@
   },
   "homepage": "https://github.com/nojvek/chrome-remote-debug-protocol#readme",
   "devDependencies": {
+    "@types/node-fetch": "0.0.4",
     "coffee-script": "^1.10.0",
     "es6-simple-async": "^1.1.1",
     "jake": "^8.0.12",
     "node-fetch": "^1.5.3",
     "promisify-node": "^0.4.0",
-    "typescript": "^2.0.0"
+    "typescript": "^2.0.3"
   }
 }
