--- a/package.json
+++ b/package.json
@@ -40,13 +40,15 @@
     "url": "https://github.com/nojvek/chrome-remote-debug-protocol/issues"
   },
   "homepage": "https://github.com/nojvek/chrome-remote-debug-protocol#readme",
+  "dependencies": {
+    "node-fetch": "^1.5.3",
+    "promisify-node": "^0.4.0"
+  },
   "devDependencies": {
     "@types/node-fetch": "0.0.4",
     "coffee-script": "^1.10.0",
     "es6-simple-async": "^1.1.1",
     "jake": "^8.0.12",
-    "node-fetch": "^1.5.3",
-    "promisify-node": "^0.4.0",
     "typescript": "^2.0.3"
   }
 }
